// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/List/ListItem DisabledListItem smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: undefinedpx;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-4 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: auto;
  overflow: auto;
  overflow-x: hidden;
  background: #ffffff;
}

.emotion-5 {
  background-color: rgba(84,94,255,0);
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-5>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-5[role='option'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-5[role='option']:hover {
  cursor: initial;
}

.emotion-5[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-6 {
  color: #1B214F;
  font-weight: initial;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6 span {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 .react-switch-handle {
  cursor: not-allowed!important;
  border: 0!important;
  box-sizing: border-box!important;
  -webkit-transform: translateX(1rem)!important;
  -moz-transform: translateX(1rem)!important;
  -ms-transform: translateX(1rem)!important;
  transform: translateX(1rem)!important;
}

.emotion-10 .react-switch-handle:hover {
  box-shadow: 0;
  background: !important;
}

.emotion-10 .react-switch-bg {
  cursor: not-allowed!important;
  margin-right: 0!important;
  margin-left: 0!important;
}

.emotion-10 .react-switch-bg:hover~.react-switch-handle {
  box-shadow: 0;
  background: !important;
}

.emotion-12 {
  background-color: rgba(84,94,255,0);
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-12>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-12 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-12[role='option'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-12[role='option']:hover {
  cursor: initial;
}

.emotion-12[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-12[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-14 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #1249C4;
}

.emotion-20 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-21 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-21:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-22 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-22+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-22+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-22:disabled+label {
  cursor: not-allowed;
}

.emotion-23 span {
  padding: 0;
}

.emotion-23 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-25 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-25 path {
  fill: white;
}

.emotion-29 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-30 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-30:disabled {
  cursor: default;
}

.emotion-31 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-32 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-32:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #c3cddf;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-32:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #c3cddf;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-33 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:r1i:"
                  class="emotion-4"
                  id="react-aria4276886737-:r1g:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-disabled="true"
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="1"
                    data-testid="ictinus_list_item_1"
                    id="react-aria4276886737-:r1g:-option-1"
                    role="option"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        This text option is disabled
                      </span>
                    </div>
                  </li>
                  <li
                    aria-disabled="true"
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="3"
                    data-testid="ictinus_list_item_3"
                    id="react-aria4276886737-:r1g:-option-3"
                    role="option"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        This Switch Option is disabled
                      </span>
                    </div>
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10 emotion-11"
                      >
                        <div
                          style="position: relative; display: inline-block; text-align: left; opacity: 0.5; direction: ltr; border-radius: 4px; transition: opacity 0.25s ease 0s; touch-action: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none;"
                        >
                          <div
                            class="react-switch-bg"
                            style="height: 8px; width: 36px; margin: 6px; position: relative; background: rgb(185, 205, 252); border-radius: 4px; cursor: default; transition: background 0.25s ease 0s;"
                          />
                          <div
                            class="react-switch-handle"
                            style="height: 20px; width: 20px; background: rgb(23, 91, 245); display: inline-block; cursor: default; border-radius: 50%; position: absolute; transform: translateX(28px); top: 0px; outline: 0px; border: 0px; transition: background-color 0.25s ease 0s, transform 0.25s ease 0s, box-shadow 0.15s ease 0s;"
                          />
                          <input
                            aria-checked="true"
                            checked=""
                            data-testid="switch"
                            disabled=""
                            role="switch"
                            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                            type="checkbox"
                          />
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    aria-disabled="true"
                    aria-selected="false"
                    class="emotion-12 "
                    data-key="4"
                    data-testid="ictinus_list_item_4"
                    id="react-aria4276886737-:r1g:-option-4"
                    role="option"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-14"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-15"
                        >
                          <svg
                            class="emotion-16"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        This Avatar Option is disabled
                      </span>
                    </div>
                  </li>
                  <li
                    aria-disabled="true"
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="5"
                    data-testid="ictinus_list_item_5"
                    id="react-aria4276886737-:r1g:-option-5"
                    role="option"
                  >
                    <div
                      class="emotion-9"
                    >
                      <span
                        class="emotion-20"
                      >
                        <span
                          class="emotion-21"
                        >
                          <input
                            class="emotion-22"
                            data-testid="checkbox"
                            disabled=""
                            id="styled-checkbox-3"
                            type="checkbox"
                          />
                          <label
                            class="emotion-23"
                            for="styled-checkbox-3"
                          >
                            <span
                              class="emotion-15"
                            >
                              <svg
                                class="emotion-25"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlns:xlink="http://www.w3.org/1999/xlink"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  id="\\uD83D\\uDD36-Symbols"
                                  stroke="none"
                                  stroke-width="1"
                                >
                                  <g
                                    id="Checkmark"
                                  >
                                    <path
                                      d="M16.1742639,3.56546017 L17.5665405,4.95773677 L9.21853983,13.3054602 L14.0871995,18.1742639 L12.6949229,19.5665405 L6.43453983,13.3061575 L6.43653983,13.3044602 L6.43589028,13.3038338 L16.1742639,3.56546017 Z"
                                      transform="translate(12.000540, 11.566000) scale(-1, 1) rotate(-90.000000) translate(-12.000540, -11.566000)"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </span>
                          </label>
                        </span>
                      </span>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        This Checkbox Option is disabled
                      </span>
                    </div>
                  </li>
                  <li
                    aria-disabled="true"
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="6"
                    data-testid="ictinus_list_item_6"
                    id="react-aria4276886737-:r1g:-option-6"
                    role="option"
                  >
                    <div
                      class="emotion-9"
                    >
                      <span
                        class="emotion-29"
                        data-testid="radio-input"
                      >
                        <input
                          class="emotion-30"
                          disabled=""
                          type="radio"
                          value="on"
                        />
                        <span
                          class="emotion-31"
                        >
                          <span
                            class="emotion-32"
                          />
                          <span
                            class="emotion-33"
                          />
                        </span>
                      </span>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        This Radio Option is disabled
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/List/ListItem ListItemCompilations smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: undefinedpx;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-4 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: auto;
  overflow: auto;
  overflow-x: hidden;
  background: #ffffff;
}

.emotion-5 {
  background-color: rgba(84,94,255,0);
  opacity: 1;
  cursor: initial;
}

.emotion-5>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-5[role='option'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-5[role='option']:hover {
  background-color: rgba(84,94,255,0.06);
  cursor: pointer;
}

.emotion-5[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-6 {
  color: #1B214F;
  font-weight: initial;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6 span {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-7 {
  background-color: rgba(84,94,255,0);
  opacity: 1;
  cursor: initial;
}

.emotion-7>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-7[role='option'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-7[role='option']:hover {
  background-color: rgba(84,94,255,0.06);
  cursor: pointer;
}

.emotion-7[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-7[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-24 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-24:disabled {
  cursor: default;
}

.emotion-25 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-26 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-26:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #b7c3d8;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-26:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #b7c3d8;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-27 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-42 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-43 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-43:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-43:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-44 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-44+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-44+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-44:disabled+label {
  cursor: not-allowed;
}

.emotion-45 span {
  padding: 0;
}

.emotion-45 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-46 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-47 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-47 path {
  fill: white;
}

.emotion-64 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-64 .react-switch-handle {
  cursor: unset!important;
  border: 2px solid #b7c3d8!important;
  box-sizing: border-box!important;
  -webkit-transform: translateX(0)!important;
  -moz-transform: translateX(0)!important;
  -ms-transform: translateX(0)!important;
  transform: translateX(0)!important;
}

.emotion-64 .react-switch-handle:hover {
  box-shadow: rgba(14,14,23,0.1) 0 0 0 5px;
  background: #dbe1eb!important;
}

.emotion-64 .react-switch-bg {
  cursor: unset!important;
  margin-right: 0!important;
  margin-left: 0!important;
}

.emotion-64 .react-switch-bg:hover~.react-switch-handle {
  box-shadow: rgba(14,14,23,0.1) 0 0 0 5px;
  background: #dbe1eb!important;
}

.emotion-76 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-76 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-78 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-78 path {
  fill: #1249C4;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:r2:"
                  class="emotion-4"
                  id="react-aria4276886737-:r0:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="1"
                    data-testid="ictinus_list_item_1"
                    id="react-aria4276886737-:r0:-option-1"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Text only
                      </span>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="emotion-7 "
                    data-key="2"
                    data-testid="ictinus_list_item_2"
                    id="react-aria4276886737-:r0:-option-2"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Text only (compact)
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:ra:"
                  class="emotion-4"
                  id="react-aria4276886737-:r8:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="3"
                    data-testid="ictinus_list_item_3"
                    id="react-aria4276886737-:r8:-option-3"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Text
                      </span>
                      <p
                        class="emotion-14"
                      >
                        with Secondary Help Text
                      </p>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="emotion-7 "
                    data-key="4"
                    data-testid="ictinus_list_item_4"
                    id="react-aria4276886737-:r8:-option-4"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Text (compact)
                      </span>
                      <p
                        class="emotion-14"
                      >
                        with Secondary Help Text
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:ri:"
                  class="emotion-4"
                  id="react-aria4276886737-:rg:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="5"
                    data-testid="ictinus_list_item_5"
                    id="react-aria4276886737-:rg:-option-5"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-22"
                    >
                      <span
                        class="emotion-23"
                        data-testid="radio-input"
                      >
                        <input
                          class="emotion-24"
                          type="radio"
                          value="on"
                        />
                        <span
                          class="emotion-25"
                        >
                          <span
                            class="emotion-26"
                          />
                          <span
                            class="emotion-27"
                          />
                        </span>
                      </span>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Radio
                      </span>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="emotion-7 "
                    data-key="6"
                    data-testid="ictinus_list_item_6"
                    id="react-aria4276886737-:rg:-option-6"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-22"
                    >
                      <span
                        class="emotion-23"
                        data-testid="radio-input"
                      >
                        <input
                          class="emotion-24"
                          type="radio"
                          value="on"
                        />
                        <span
                          class="emotion-25"
                        >
                          <span
                            class="emotion-26"
                          />
                          <span
                            class="emotion-27"
                          />
                        </span>
                      </span>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Radio (compact)
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:rq:"
                  class="emotion-4"
                  id="react-aria4276886737-:ro:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="7"
                    data-testid="ictinus_list_item_7"
                    id="react-aria4276886737-:ro:-option-7"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-22"
                    >
                      <span
                        class="emotion-42"
                      >
                        <span
                          class="emotion-43"
                        >
                          <input
                            class="emotion-44"
                            data-testid="checkbox"
                            id="styled-checkbox-1"
                            type="checkbox"
                          />
                          <label
                            class="emotion-45"
                            for="styled-checkbox-1"
                          >
                            <span
                              class="emotion-46"
                            >
                              <svg
                                class="emotion-47"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlns:xlink="http://www.w3.org/1999/xlink"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  id="\\uD83D\\uDD36-Symbols"
                                  stroke="none"
                                  stroke-width="1"
                                >
                                  <g
                                    id="Checkmark"
                                  >
                                    <path
                                      d="M16.1742639,3.56546017 L17.5665405,4.95773677 L9.21853983,13.3054602 L14.0871995,18.1742639 L12.6949229,19.5665405 L6.43453983,13.3061575 L6.43653983,13.3044602 L6.43589028,13.3038338 L16.1742639,3.56546017 Z"
                                      transform="translate(12.000540, 11.566000) scale(-1, 1) rotate(-90.000000) translate(-12.000540, -11.566000)"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </span>
                          </label>
                        </span>
                      </span>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Checkbox
                      </span>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="emotion-7 "
                    data-key="8"
                    data-testid="ictinus_list_item_8"
                    id="react-aria4276886737-:ro:-option-8"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-22"
                    >
                      <span
                        class="emotion-42"
                      >
                        <span
                          class="emotion-43"
                        >
                          <input
                            class="emotion-44"
                            data-testid="checkbox"
                            id="styled-checkbox-2"
                            type="checkbox"
                          />
                          <label
                            class="emotion-45"
                            for="styled-checkbox-2"
                          >
                            <span
                              class="emotion-46"
                            >
                              <svg
                                class="emotion-47"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlns:xlink="http://www.w3.org/1999/xlink"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  id="\\uD83D\\uDD36-Symbols"
                                  stroke="none"
                                  stroke-width="1"
                                >
                                  <g
                                    id="Checkmark"
                                  >
                                    <path
                                      d="M16.1742639,3.56546017 L17.5665405,4.95773677 L9.21853983,13.3054602 L14.0871995,18.1742639 L12.6949229,19.5665405 L6.43453983,13.3061575 L6.43653983,13.3044602 L6.43589028,13.3038338 L16.1742639,3.56546017 Z"
                                      transform="translate(12.000540, 11.566000) scale(-1, 1) rotate(-90.000000) translate(-12.000540, -11.566000)"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </span>
                          </label>
                        </span>
                      </span>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Checkbox (compact)
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:r12:"
                  class="emotion-4"
                  id="react-aria4276886737-:r10:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="9"
                    data-testid="ictinus_list_item_9"
                    id="react-aria4276886737-:r10:-option-9"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Switch
                      </span>
                    </div>
                    <div
                      class="emotion-22"
                    >
                      <div
                        class="emotion-64 emotion-65"
                      >
                        <div
                          style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 4px; transition: opacity 0.25s ease 0s; touch-action: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none;"
                        >
                          <div
                            class="react-switch-bg"
                            style="height: 8px; width: 36px; margin: 6px; position: relative; background: rgb(219, 225, 235); border-radius: 4px; cursor: pointer; transition: background 0.25s ease 0s;"
                          />
                          <div
                            class="react-switch-handle"
                            style="height: 20px; width: 20px; background: rgb(243, 245, 248); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(0px); top: 0px; outline: 0px; border: 0px; transition: background-color 0.25s ease 0s, transform 0.25s ease 0s, box-shadow 0.15s ease 0s;"
                          />
                          <input
                            aria-checked="false"
                            data-testid="switch"
                            role="switch"
                            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                            type="checkbox"
                          />
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="emotion-7 "
                    data-key="10"
                    data-testid="ictinus_list_item_10"
                    id="react-aria4276886737-:r10:-option-10"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Switch (compact)
                      </span>
                    </div>
                    <div
                      class="emotion-22"
                    >
                      <div
                        class="emotion-64 emotion-65"
                      >
                        <div
                          style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 4px; transition: opacity 0.25s ease 0s; touch-action: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none;"
                        >
                          <div
                            class="react-switch-bg"
                            style="height: 8px; width: 36px; margin: 6px; position: relative; background: rgb(219, 225, 235); border-radius: 4px; cursor: pointer; transition: background 0.25s ease 0s;"
                          />
                          <div
                            class="react-switch-handle"
                            style="height: 20px; width: 20px; background: rgb(243, 245, 248); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(0px); top: 0px; outline: 0px; border: 0px; transition: background-color 0.25s ease 0s, transform 0.25s ease 0s, box-shadow 0.15s ease 0s;"
                          />
                          <input
                            aria-checked="false"
                            data-testid="switch"
                            role="switch"
                            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                            type="checkbox"
                          />
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
        <span
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              data-testid="ictinus_list"
            >
              <div
                style="height: 100%;"
              >
                <ul
                  aria-labelledby="react-aria4276886737-:r1a:"
                  class="emotion-4"
                  id="react-aria4276886737-:r18:"
                  role="listbox"
                  style="overflow-y: auto; position: relative; display: flex; flex-direction: column; height: 100%; list-style: none; padding: 0px;"
                  tabindex="0"
                >
                  <li
                    aria-selected="false"
                    class="emotion-5 "
                    data-key="11"
                    data-testid="ictinus_list_item_11"
                    id="react-aria4276886737-:r18:-option-11"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-22"
                    >
                      <div
                        class="emotion-76"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-46"
                        >
                          <svg
                            class="emotion-78"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Icon/Avatar
                      </span>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    class="emotion-7 "
                    data-key="12"
                    data-testid="ictinus_list_item_12"
                    id="react-aria4276886737-:r18:-option-12"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class="emotion-22"
                    >
                      <div
                        class="emotion-76"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-46"
                        >
                          <svg
                            class="emotion-78"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="emotion-6"
                    >
                      <span>
                        Option Icon/Avatar (compact)
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </span>
      </span>
    </span>
  </body>
</html>
`;
